syntax = "proto3";

package bluekaki.vv.options;

option go_package = "github.com/bluekaki/vv/options";

import "google/protobuf/descriptor.proto";

message Validator { string name = 1; }

extend google.protobuf.MethodOptions {
  optional bool journal = 74370;
  optional Validator authorization = 74371;
  optional Validator proxy_authorization = 74372;
  optional string metrics_alias = 74373;
}